--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>415</width>
+    <width>874</width>
     <height>491</height>
    </rect>
   </property>
@@ -17,7 +17,7 @@
    <widget class="QSlider" name="horizontalSlider_1">
     <property name="geometry">
      <rect>
-      <x>179</x>
+      <x>200</x>
       <y>65</y>
       <width>84</width>
       <height>22</height>
@@ -30,7 +30,7 @@
    <widget class="QSpinBox" name="spinBox_1">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>311</x>
       <y>66</y>
       <width>51</width>
       <height>20</height>
@@ -40,7 +40,7 @@
    <widget class="QLabel" name="label_1">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>31</x>
       <y>68</y>
       <width>141</width>
       <height>21</height>
@@ -53,7 +53,7 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>9</x>
+      <x>30</x>
       <y>151</y>
       <width>151</width>
       <height>21</height>
@@ -66,7 +66,7 @@
    <widget class="QSpinBox" name="spinBox_2">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>311</x>
       <y>151</y>
       <width>51</width>
       <height>20</height>
@@ -76,7 +76,7 @@
    <widget class="QSlider" name="horizontalSlider_2">
     <property name="geometry">
      <rect>
-      <x>179</x>
+      <x>200</x>
       <y>150</y>
       <width>84</width>
       <height>22</height>
@@ -89,7 +89,7 @@
    <widget class="QSlider" name="horizontalSlider_3">
     <property name="geometry">
      <rect>
-      <x>179</x>
+      <x>200</x>
       <y>234</y>
       <width>84</width>
       <height>22</height>
@@ -102,7 +102,7 @@
    <widget class="QSpinBox" name="spinBox_3">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>311</x>
       <y>235</y>
       <width>51</width>
       <height>20</height>
@@ -112,7 +112,7 @@
    <widget class="QSlider" name="horizontalSlider_4">
     <property name="geometry">
      <rect>
-      <x>179</x>
+      <x>200</x>
       <y>318</y>
       <width>84</width>
       <height>22</height>
@@ -125,7 +125,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>9</x>
+      <x>30</x>
       <y>236</y>
       <width>141</width>
       <height>21</height>
@@ -138,7 +138,7 @@
    <widget class="QSpinBox" name="spinBox_4">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>311</x>
       <y>319</y>
       <width>51</width>
       <height>20</height>
@@ -148,21 +148,21 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>9</x>
+      <x>30</x>
       <y>320</y>
       <width>141</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Time per Trial:</string>
+     <string>Time per Trial (ms):</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>400</y>
+      <x>380</x>
+      <y>390</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -171,13 +171,157 @@
      <string>Start Trials</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>316</y>
+      <width>141</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Height (pixels):</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_6">
+    <property name="geometry">
+     <rect>
+      <x>761</x>
+      <y>147</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_8">
+    <property name="geometry">
+     <rect>
+      <x>761</x>
+      <y>315</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>481</x>
+      <y>60</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Size of Dots (pixels):</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>147</y>
+      <width>151</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Number of Trials:</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_7">
+    <property name="geometry">
+     <rect>
+      <x>761</x>
+      <y>231</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QSlider" name="horizontalSlider_8">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>314</y>
+      <width>84</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="horizontalSlider_6">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>146</y>
+      <width>84</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spinBox_5">
+    <property name="geometry">
+     <rect>
+      <x>761</x>
+      <y>62</y>
+      <width>51</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>480</x>
+      <y>232</y>
+      <width>141</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Width (pixels):</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="horizontalSlider_5">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>61</y>
+      <width>84</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="horizontalSlider_7">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>230</y>
+      <width>84</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>415</width>
+     <width>874</width>
      <height>21</height>
     </rect>
    </property>
