Fixes sliders for proper default values. Windows closes without reopening now.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -298,6 +298,9 @@
       <height>22</height>
      </rect>
     </property>
+    <property name="pageStep">
+     <number>1</number>
+    </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
